tests/scripts/enum4.hk.err
error: 8:5 - Invalid match pattern
    None => println("None"),
    ^^^^
